@@ -1,7 +1,7 @@
 #!/bin/sh
-# episoder installer v0.2.2, http://tools.desire.ch/episoder/
+# episoder installer v0.2.1, http://tools.desire.ch/episoder/
 #
-# Copyright (c) 2004, 2005 Stefan Ott. All rights reserved.
+# Copyright (c) 2004 Stefan Ott. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -27,7 +27,8 @@ install() {
 
     cp scripts/*sh $EPISODER_HOME
     cp plugins/* $EPISODER_HOME
-    cp scripts/episoder $BASE_DIR/bin
+    cat scripts/episoder | sed "s:/usr/share/episoder:$EPISODER_HOME:" > $BASE_DIR/bin/episoder
+    chmod +x $BASE_DIR/bin/episoder
     cp episoder.1 $MAN_DIR/
 }
 
