@@ -5,6 +5,7 @@ Get the latest version at http://tools.desire.ch/episoder/
 v0.2.2 (some day)
 ===================
  * Added LICENSE file
+ * install.sh now correctly changes the EPISODER_HOME value
 
 v0.2.1 (4 Jan 2005)
 ===================
